--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,22 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primaryBackgroundLight: #e87fc9;
+  --primaryBackgroundDark: #a43e7f;
+  --secondaryBackground: beige;
+  --primaryText: beige;
+  --secondaryText: #623954;
+  --highlightedText: yellow;
 }
 
 html,
 body {
   max-width: 100vw;
+  min-height: 100svh;
   overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--primaryTextColor);
+  background: var(--secondaryBackground);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
