--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,11 @@
+
 :root {
   --primaryBackgroundLight: #e87fc9;
   --primaryBackgroundDark: #a43e7f;
   --secondaryBackground: white;
+  --secondaryBackgroundDark: #fdabd7;
   --primaryText: white;
-  --secondaryText: #E349C2;
+  --secondaryText: #e349c2;
   --secondaryTextLight: #936885;
   --secondaryTextDark: #623954;
   --highlightedText: yellow;
@@ -38,4 +40,15 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.primaryButton {
+  color: var(--primaryText);
+  background-color: var(--secondaryTextDark);
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 1px solid var(--primaryTextColor);
+  border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+  font-size:medium;
+  cursor: pointer;
 }
