--- a/app/ui/home/serviceDetails.module.css
+++ b/app/ui/home/serviceDetails.module.css
@@ -3,19 +3,23 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 15rem;
-  background-color: var(--primaryBackgroundDark);
+  /* width: 100%; */
+  height: auto;
+  padding: 1rem;
+  background-color: var(--secondaryBackground);
 }
 
 .subContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  display: grid;
+  grid-template-rows: 1fr 2.2fr 1fr;
+  align-items: center;
+  padding: 1rem;
+  margin: 2rem;
   color: var(--primaryText);
+  text-align: center;
+  width: 12rem;
+  border-radius: 0.5rem 0.5rem 0rem 0.5rem;
+  background-color: var(--primaryBackgroundDark);
 }
 
 .middleContainer {
@@ -24,23 +28,38 @@
 }
 
 .title {
-  font-size: 1.8rem;
+  width: 100%;
+  font-size: 1.5rem;
   text-align: center;
   text-shadow: 2px 2px 4px var(--secondaryTextDark);
 }
 
-.servicesText {
+.descriptionText {
+  width: 100%;
+  padding-top: 0.5rem;
   font-size: middle;
-  text-align: left;
+  text-align: center;
   text-shadow: 2px 2px 4px var(--secondaryTextDark);
 }
 
+.buttonContainer {
+  width: 100%;
+}
+
 @media screen and (max-width: 600px) {
+  .container {
+    display: flex;
+      flex-direction: column;
+    justify-content: center;
+  }
+
   .subContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    width: 90%;
+    margin: 0.2rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     color: var(--primaryText);
@@ -53,7 +72,7 @@
   }
 
   .servicesText {
-    font-size: middle;
+    font-size: small;
     text-align: left;
     text-shadow: 2px 2px 4px var(--secondaryTextDark);
   }
