--- a/app/ui/home/reviews.module.css
+++ b/app/ui/home/reviews.module.css
@@ -1,43 +1,51 @@
 .container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  /* width: 100%; */
   height: auto;
   padding: 1rem;
   background-color: var(--secondaryBackground);
 }
 
-.subContainer {
+.sectionTitle {
+  color: var(--secondaryTextDark);
+  font-weight: 500;
+  font-size: 1.8rem;
+  padding-top: 1rem;
+}
+
+.cardsContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  padding: 1rem;
+}
+
+.card {
   display: grid;
-  grid-template-rows: 1fr 1fr 2.2fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   align-items: center;
   padding: 1rem;
   margin: 2rem;
   color: var(--secondaryTextDark);
   text-align: center;
   width: 12rem;
+  height: 20rem;
   border-radius: 0.5rem 0.5rem 0rem 0.5rem;
   background-color: var(--secondaryBackgroundDark);
 }
 
-.middleContainer {
-  border-right: 1px solid var(--primaryBackgroundLight);
-  border-left: 1px solid var(--primaryBackgroundLight);
-}
-
-.client {
+.cardTitle {
   width: 100%;
-  font-size: middle;
+  font-size: x-large;
   text-align: center;
-  font-weight: bold;
-  /* text-shadow: 2px 2px 4px var(--secondaryTextDark); */
+  font-weight: normal;
 }
 
-.descriptionText .serviceType {
+.cardText .serviceType {
   width: 100%;
-  padding-top: 0.5rem;
   font-size: middle;
   text-align: center;
   text-shadow: 2px 2px 4px var(--secondaryTextDark);
@@ -47,34 +55,37 @@
   width: 100%;
 }
 
+.stars {
+  color: var(--secondaryTextDark);
+}
+
 @media screen and (max-width: 600px) {
-  .container {
-    display: flex;
-      flex-direction: column;
-    justify-content: center;
+  .sectionTitle {
+    font-size: 1.6rem;
   }
 
-  .subContainer {
+  .cardsContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    width: 90%;
-    margin: 0.2rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    color: var(--primaryText);
   }
 
-  .title {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+  .card {
+    width: 90%;
+    gap: 0.2rem;
+    height: auto;
+  }
+
+  .cardTitle {
     font-size: 1.2rem;
   }
+}
 
-  .servicesText {
-    font-size: small;
-    text-align: left;
-    text-shadow: 2px 2px 4px var(--secondaryTextDark);
+@media screen and (min-width: 600) and (max-width: 820px) {
+  .cardsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
   }
 }
