--- a/app/reviews/reviews.module.css
+++ b/app/reviews/reviews.module.css
@@ -1,11 +1,18 @@
 .container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  /* width: 100%; */
-  height: auto;
+  gap: 1rem;
+  flex-wrap: wrap;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: var(--primaryText);
+}
+
+.card {
+  text-align: center;
+  width: 15rem;
+  height: 20rem;
   padding: 1rem;
-  color: var(--secondaryText);
-  background-color: var(--secondaryBackground);
+  border-radius: 0.5rem 0.5rem 0rem 0.5rem;
+  background-color: var(--primaryBackgroundDark);
 }
