--- a/app/ui/home/welcome.module.css
+++ b/app/ui/home/welcome.module.css
@@ -4,7 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 15rem;
+  height: auto;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   background-color: var(--secondaryBackground);
 }
 
@@ -26,35 +28,61 @@
   padding: 1rem;
 }
 
-.title {
+.sectionTitle {
   font-size: 1.8rem;
   font-weight: normal;
   text-align: center;
-  color: var(--secondaryText);
-  width: 70%;
+  color: var(--secondaryTextDark);
+  width: 60%;
 }
 
 .decoration {
   margin-top: 1rem;
   padding-bottom: 1rem;
   width: 40%;
-  border-top: 1px solid var(--secondaryText);
+  border-top: 1px solid var(--secondaryTextDark);
 }
 
 .welcomeText {
-  font-size: medium;
-  width: 70%;
+  font-size: large;
+  color: var(--secondaryTextDark);
+  width: 60%;
   text-align: center;
+  line-height: 1.8rem;
+  padding-bottom: 1rem;
 }
 
 @media screen and (max-width: 600px) {
-  .title {
-    font-size: 1.2rem;
+  .container {
+    padding-top: 1rem;
+    height: auto;
+  }
+  .sectionTitle {
+    font-size: 1.5rem;
     width: 90%;
   }
 
   .welcomeText {
-    font-size: middle;
+    font-size: 1rem;
     width: 90%;
+  }
+}
+
+@media screen and (min-width:600) and (max-width: 820px) {
+  .container {
+    padding-top: 1.2rem;
+    height: auto;
+  }
+  .sectionTitle {
+    font-size: 1.5rem;
+    width: 80%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .welcomeText {
+    padding-top: 1.2rem;
+    font-size: 1.2rem;
+    width: 80%;
   }
 }
