--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,15 @@
 :root {
-  --primaryBackgroundLight: #e87fc9;
-  --primaryBackgroundDark: #a43e7f;
-  --secondaryBackground: white;
-  --secondaryBackgroundDark: #f7c4df;
-  --primaryText: white;
-  --secondaryText: #e349c2;
-  --secondaryTextLight: #936885;
-  --secondaryTextDark: #623954;
-  --highlightedText: #f7c4df;
+  --primaryBg: #e87fc9;
+  --primaryBgDark: #a43e7f;
+  --secondaryBg: white;
+  --secondaryBgDark: #f7c4df;
+  
+  --primary: white;
+  --primaryDark:  #2a021d;
+  --secondary: #e349c2;
+  --secondaryLight: #936885;
+  --secondaryDark: #623954;
+  --highLighted: #f7c4df;
 }
 
 html,
@@ -19,7 +21,7 @@ body {
 
 body {
   color: var(--primaryTextColor);
-  background: var(--secondaryBackground);
+  background: var(--secondaryBg);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -42,18 +44,18 @@ a {
 }
 
 .primaryButton {
-  color: var(--primaryText);
-  background-color: var(--secondaryTextDark);
+  color: var(--primary);
+  background-color: var(--secondaryDark);
   padding: 0.5rem;
   margin: 0.5rem;
-  border: 1px solid var(--primaryText);
+  border: 1px solid var(--primary);
   border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
   font-size: medium;
   cursor: pointer;
 }
 
 .primaryButton:hover {
-  background-color: var(--primaryText);
-  color: var(--secondaryTextDark);
-  border: 1px solid var(--secondaryTextDark);
+  background-color: var(--primary);
+  color: var(--secondaryDark);
+  border: 1px solid var(--secondaryDark);
 }
