--- a/app/ui/footer.module.css
+++ b/app/ui/footer.module.css
@@ -4,8 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 15rem;
-  background-color: var(--primaryBackgroundDark);
+  height: 14rem;
+  padding: 1rem;
+  background-color: var(--primaryBgDark);
 }
 
 .horizontalContainer {
@@ -23,18 +24,18 @@
   text-align: center;
 }
 
-.text {
-  color: var(--primaryText);
+.textPlace {
+  color: var(--primary);
   font-size: xx-large;
   text-align: center;
-  text-shadow: 2px 2px 4px (--secondaryTextDark);
+  text-shadow: 2px 2px 4px (--secondaryDark);
 }
 
-.highlightedText {
+.highLighted {
   font-size: xx-large;
-  color: var(--secondaryBackgroundDark);
+  color: var(--secondaryBgDark);
   text-align: center;
-  text-shadow: 2px 2px 4px (--highlightedText);
+  text-shadow: 2px 2px 4px (--highLighted);
 }
 
 .textAndIconsContainer {
@@ -42,7 +43,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: left;
   width: 100%;
-  color: var(--primaryText);
+  color: var(--primary);
   font-size: medium;
 }
 
@@ -51,7 +52,7 @@
   grid-template-columns: 1fr 3fr;
   text-align: left;
   width: 100%;
-  color: var(--primaryText);
+  color: var(--primary);
   font-size: medium;
 }
 
@@ -61,8 +62,15 @@
   padding-right: 0.5rem;
 }
 
-.copyright {
-  font-size: small;
+.contactDetails {
+  color: var(--primaryDark);
+  font-size: large;
+  font-weight: bold;
+}
+
+.contactDeveloper {
+  color: var(--primaryDark);
+  font-size: smaller;
 }
 
 .largeScreen {
@@ -83,13 +91,11 @@
   }
 
   .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
     height: auto;
-    background-color: var(--primaryBackgroundDark);
+  }
+
+  .horizontalContainer {
+    font-size: small;
   }
 
   .verticalContainer {
@@ -102,25 +108,30 @@
     padding-bottom: 0.5rem;
   }
 
-  .horizontalContainer {
+  .highLighted {
+    font-size: large;
+    color: var(--highLighted);
+    text-align: center;
+    text-shadow: 2px 2px 4px (--highLighted);
+  }
+
+  .textPlace {
+    color: var(--primary);
+    font-size: large;
+    text-shadow: 2px 2px 4px (--secondaryDark);
+  }
+
+  .contactDetails {
+    font-size: medium;
+  }
+
+  .contactDeveloper {
     font-size: small;
   }
+}
 
-  .highlightedText {
-    font-size: large;
-    color: var(--highlightedText);
-    text-align: center;
-    text-shadow: 2px 2px 4px (--highlightedText);
-  }
-
-  .text {
-    color: var(--primaryText);
-    font-size: large;
-    text-align: center;
-    text-shadow: 2px 2px 4px (--secondaryTextDark);
-  }
-
-  .copyright {
-    font-size:x-small;
+@media screen and (min-width: 600) and (max-width: 820px) {
+  .contactDeveloper {
+    font-size: small;
   }
 }
