--- a/app/ui/home/reviews.module.css
+++ b/app/ui/home/reviews.module.css
@@ -4,11 +4,11 @@
   align-items: center;
   height: auto;
   padding: 1rem;
-  background-color: var(--secondaryBackground);
+  background-color: var(--secondaryBg);
 }
 
 .sectionTitle {
-  color: var(--secondaryTextDark);
+  color: var(--secondaryDark);
   font-weight: 500;
   font-size: 1.8rem;
   padding-top: 1rem;
@@ -29,12 +29,12 @@
   align-items: center;
   padding: 1rem;
   margin: 2rem;
-  color: var(--secondaryTextDark);
+  color: var(--secondaryDark);
   text-align: center;
   width: 12rem;
   height: 20rem;
   border-radius: 0.5rem 0.5rem 0rem 0.5rem;
-  background-color: var(--secondaryBackgroundDark);
+  background-color: var(--secondaryBgDark);
 }
 
 .cardTitle {
@@ -48,7 +48,7 @@
   width: 100%;
   font-size: middle;
   text-align: center;
-  text-shadow: 2px 2px 4px var(--secondaryTextDark);
+  text-shadow: 2px 2px 4px var(--secondaryDark);
 }
 
 .buttonContainer {
@@ -56,7 +56,7 @@
 }
 
 .stars {
-  color: var(--secondaryTextDark);
+  color: var(--secondaryDark);
 }
 
 @media screen and (max-width: 600px) {
