--- a/app/ui/home/services.module.css
+++ b/app/ui/home/services.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondaryBackgroundDark);
+  background-color: var(--secondaryBgDark);
   padding: 1rem 1rem 2rem 1rem;
 }
 
@@ -12,7 +12,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  color: var(--secondaryTextDark);
+  color: var(--secondaryDark);
 }
 
 .card {
@@ -21,12 +21,12 @@
   justify-content: center;
   padding-left: 2rem;
   padding-right: 2rem;
-  color: var(--secondaryTextDark);
+  color: var(--secondaryDark);
 }
 
 .leftCard {
   align-items: flex-end;
-  border-right: 1px solid var(--secondaryTextDark);
+  border-right: 1px solid var(--secondaryDark);
 }
 
 .inCard {
