--- a/app/ui/footer.module.css
+++ b/app/ui/footer.module.css
@@ -33,7 +33,7 @@
 
 .highLighted {
   font-size: xx-large;
-  color: var(--secondaryBgDark);
+  color: var(--secondaryBgLight);
   text-align: center;
   text-shadow: 2px 2px 4px (--highLighted);
 }
