--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,10 @@
   --primaryBg: #e87fc9;
   --primaryBgDark: #a43e7f;
   --secondaryBg: white;
-  --secondaryBgDark: #f7c4df;
-  
+  --secondaryBgLight: #f7c4df;
+
   --primary: white;
-  --primaryDark:  #2a021d;
+  --primaryDark: #2a021d;
   --secondary: #e349c2;
   --secondaryLight: #936885;
   --secondaryDark: #623954;
@@ -58,4 +58,23 @@ a {
   background-color: var(--primary);
   color: var(--secondaryDark);
   border: 1px solid var(--secondaryDark);
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  width: 100%;
+  text-align: center;
+  font-size: large;
+  font-weight: 300;
+}
+
+p {
+  line-height: 2;
+}
+
+li {
+  line-height: 1.9;
 }
