--- a/app/reviews/reviewSymmary.module.css
+++ b/app/reviews/reviewSymmary.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  color: var(--primary);
-  background-color: var(--secondaryDark);
+  color: var(--primaryDark);
+  background-color: var(--secondaryBg);
   width: 100%;
 }
 
@@ -17,5 +17,5 @@
   margin-top: 1rem;
   padding-bottom: 1rem;
   width: 40%;
-  border-top: 1px solid var(--primary);
+  border-top: 1px solid var(--primaryDark);
 }
