--- a/app/ui/home/welcome.module.css
+++ b/app/ui/home/welcome.module.css
@@ -1,55 +1,50 @@
 .container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: auto;
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  background-color: var(--secondaryBg);
-}
-
-.horizontalContainer {
-  display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: 30rem;
+  /* padding-top: 2rem;
+  padding-bottom: 1rem; */
 }
 
-.verticalContainer {
+.textContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding: 1rem;
+  color: var(--secondaryDark);
+  background-color: var(--secondaryBg);
+  width: 30%;
 }
 
-.image {
-  padding: 1rem;
+.imageContainer {
+  width: 70%;
+  height: 100%;
+  background-image: url("../../../public/images/goldcoast.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .sectionTitle {
   font-size: 1.8rem;
   font-weight: normal;
+  padding: 1rem;
   text-align: center;
-  color: var(--secondaryDark);
-  width: 60%;
 }
 
 .decoration {
-  margin-top: 1rem;
-  padding-bottom: 1rem;
-  width: 40%;
+  width: 70%;
   border-top: 1px solid var(--secondaryDark);
 }
 
 .welcomeText {
-  font-size: large;
-  color: var(--secondaryDark);
-  width: 60%;
-  text-align: center;
+  font-size: 1.1rem;
+  text-align: justify;
   line-height: 1.8rem;
-  padding-bottom: 1rem;
+  padding: 1rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -63,12 +58,15 @@
   }
 
   .welcomeText {
-    font-size: 1rem;
+    font-size: 1.1rem;
     width: 90%;
+    text-align: justify;
+    padding: 0.5rem;
+    line-height: 1.8rem;
   }
 }
 
-@media screen and (min-width:600) and (max-width: 820px) {
+@media screen and (min-width: 600) and (max-width: 820px) {
   .container {
     padding-top: 1.2rem;
     height: auto;
@@ -84,5 +82,6 @@
     padding-top: 1.2rem;
     font-size: 1.2rem;
     width: 80%;
+    text-align: justify;
   }
 }
