--- a/app/services/servicesDetails.module.css
+++ b/app/services/servicesDetails.module.css
@@ -16,16 +16,18 @@
   font-weight: normal;
   text-align: left;
   color: var(--secondaryDark);
-  width: 92%;
-  padding: 1rem;
+  width: 95%;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 .decoration {
-  margin-top: 1rem;
-  padding-bottom: 1rem;
-  width: 95%;
-  border-top: 1px solid var(--secondaryDark);
-  border-bottom: 1px solid var(--secondaryDark);
+  width: 100%;
+  border-left: 1.5px solid var(--secondaryDark);
+  border-top: 1.5px solid var(--secondaryDark);
+  border-bottom: 0.5px solid var(--secondaryDark);
+  border-right: 0.5px solid var(--secondaryDark);
+  border-radius: 0.5rem;
 }
 
 .descriptionTextContainer {
@@ -66,7 +68,7 @@
   justify-content: center;
   align-items: center;
   width: 30%;
-  height: 30rem;
+  height: 40rem;
   padding: 1.2rem;
 }
 
@@ -85,18 +87,13 @@
 @media screen and (max-width: 600px) {
   .container {
     flex-direction: column;
-    padding: 1rem 0rem 0rem 0rem;
-  }
-
-  .descriptionContainer {
-    justify-content: center;
-    font-size: medium;
-    width: 100%;
+    padding: 0;
+    /* padding: 1rem 0rem 0rem 0rem; */
   }
 
   .descriptionTitle {
     font-size: 1.5rem;
-    padding: 0rem 1rem;
+    padding: 1rem 1rem;
   }
 
   .decoration {
@@ -119,6 +116,7 @@
     padding: 0.5rem;
     font-size: 1rem;
     line-height: 1.8rem;
+    margin: 0;
   }
 
   .list {
@@ -128,12 +126,14 @@
 
   .imageContainer {
     width: 100%;
+    padding: 0;
+    margin-top: 1rem;
   }
 }
 
 @media screen and (min-width: 600) and (max-width: 820px) {
   .container {
-    padding: 1.5rem;
+    padding: 1rem;
   }
 
   .descriptionText {
