--- a/app/globals.css
+++ b/app/globals.css
@@ -67,8 +67,8 @@ h1 {
 h2 {
   width: 100%;
   text-align: center;
-  font-size: large;
-  font-weight: 300;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
 p {
