--- a/app/ui/home/welcome.module.css
+++ b/app/ui/home/welcome.module.css
@@ -49,12 +49,20 @@
 
 @media screen and (max-width: 600px) {
   .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 1rem;
     height: auto;
   }
   .sectionTitle {
     font-size: 1.5rem;
     width: 90%;
+  }
+
+  .textContainer {
+    width: 100%;
   }
 
   .welcomeText {
@@ -64,10 +72,19 @@
     padding: 0.5rem;
     line-height: 1.8rem;
   }
+
+  .imageContainer {
+    width: 100%;
+    height: 20rem;
+  }
 }
 
 @media screen and (min-width: 600) and (max-width: 820px) {
   .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 1.2rem;
     height: auto;
   }
@@ -78,10 +95,19 @@
     padding-bottom: 1rem;
   }
 
+  .textContainer {
+    width: 100%;
+  }
+
   .welcomeText {
     padding-top: 1.2rem;
     font-size: 1.2rem;
     width: 80%;
     text-align: justify;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 20rem;
   }
 }
