style modification on contact form

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
   --primaryBgDark: #a43e7f;
   --secondaryBg: white;
   --secondaryBgLight: #f7c4df;
+  --errorBg: #c11414;
 
   --primary: white;
   --primaryDark: #2a021d;
