--- a/app/contact/contactDetails.module.css
+++ b/app/contact/contactDetails.module.css
@@ -17,12 +17,6 @@
   gap: 0.3rem;
 }
 
-.fieldLabel {
-  width: 10rem;
-  text-align: right;
-  align-content: center;
-}
-
 .inputArea {
   display: flex;
   flex-direction: column;
@@ -34,7 +28,15 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: 100%;
   gap: 1rem;
+}
+
+.fieldLabel {
+  width: 10rem;
+  text-align: right;
+  height: 100%;
+  align-content: center;
 }
 
 .field {
@@ -47,8 +49,25 @@
   background-color: var(--secondaryBgLight);
 }
 
+.inputFieldContainer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: 1.2rem;
+}
+
+.inputFieldContainerOtherMessage {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
 .errorMessage {
-  color: red;
-  font-size: 0.5rem;
-  margin-top: 0.25rem;
+  color: var(--primary);
+  background-color: var(--errorBg);
+  font-size: 0.7rem;
+  margin-top: 0.1rem;
 }
