contact page responsive view is added

--- a/app/contact/contactDetails.module.css
+++ b/app/contact/contactDetails.module.css
@@ -14,8 +14,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  max-width: 600px;
+  width: 80%;
   gap: 1rem;
 }
 
@@ -43,7 +42,7 @@
 }
 
 .fieldLabel {
-  width: 10rem;
+  width: 50%;
   text-align: right;
   height: 100%;
   align-content: center;
@@ -80,4 +79,33 @@
   background-color: var(--errorBg);
   font-size: 0.7rem;
   margin-top: 0.1rem;
+}
+
+@media screen and (max-width: 600px) {
+  /*  iPhone */
+
+  .container {
+    font-size: 0.9rem;
+  }
+
+  .gridContainer {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(12, auto);
+  }
+
+  .fieldLabel {
+    width: 60%;
+    text-align: left;
+    height: auto;
+    align-content: center;
+  }
+
+  .inputArea {
+    height: 3rem;
+  }
+
+  .field {
+    width: 100%;
+    font-size: 0.9rem;
+  }
 }
