--- a/components/home/serviceDetails.module.css
+++ b/components/home/serviceDetails.module.css
@@ -28,6 +28,7 @@
   display: grid;
   grid-template-rows: 1fr 2.2fr 1fr;
   align-items: center;
+  justify-content: center;
   padding: 1rem;
   margin: 2rem;
   color: var(--primary);
@@ -51,6 +52,9 @@
 }
 
 .buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
 }
 
